--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,13 @@ services:
       - mongo
     links:
       - mongo
+    environment: 
+      - HOST_URL='domain.com'
+      - PORT=4200
+      - MONGO_URI='mongodb://mongo:27017/snapoo'
+      - JWT_SECRET='averysecretsecret'
+      - MAILGUN_API_KEY='amailgunapi'
+      - EMAIL_DOMAIN='email.domain.com'
   mongo:
     container_name: mongo
     image: mongo
