--- a/sample.env
+++ b/sample.env
@@ -1,8 +1,8 @@
-HOST_URL='domain.com'
+HOST_URL=domain.com
 PORT=4200
 
-MONGO_URI='mongodb://mongo:27017/snapoo'
-JWT_SECRET='averysecretsecret'
+MONGO_URI=mongodb://mongo:27017/snapoo
+JWT_SECRET=averysecretsecret
 
-MAILGUN_API_KEY='amailgunapikey'
-EMAIL_DOMAIN='email.domain.com'
+MAILGUN_API_KEY=amailgunapikey
+EMAIL_DOMAIN=email.domain.com
