Dockerized dev environment

--- a/docker-compose.override-sample.yml
+++ b/docker-compose.override-sample.yml
@@ -2,6 +2,7 @@ version: "2"
 services:
   snapoo:
     environment: 
+      - ENVIRONMENT=dev
       - HOST_URL=domain.com
       - PORT=4200
       - MONGO_URI=mongodb://mongo:27017/snapoo
