Changed default build environment

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
     links:
       - mongo
     environment: 
-      - ENVIRONMENT=dev
+      - ENVIRONMENT=prod
       - HOST_URL=domain.com
       - PORT=4200
       - MONGO_URI=mongodb://mongo:27017/snapoo
