--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "uniqid": "^5.0.3"
   },
   "devDependencies": {
+    "@sentry/node": "^5.1.0",
     "@types/bcrypt": "^3.0.0",
     "@types/body-parser": "^1.17.0",
     "@types/cors": "^2.8.4",
